[package]
name = "dragon_hoard"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.23", features = ["csr"] }
wasm-bindgen = "0.2"
gloo-storage = "0.4"
gloo-timers = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = ["Window", "AudioContext", "OscillatorNode", "GainNode", "OscillatorType", "AudioParam", "AudioScheduledSourceNode", "AudioNode", "AudioDestinationNode", "HtmlElement"] }
